<resources>
    <string name="app_name">Kênh bán VAS</string>
    <string-array name="menuleft_list">
        <item>Bảng xếp hạng</item>
        <item>Lịch sử bán hàng</item>
        <item>Hướng dẫn bán hàng</item>
        <item>Thông tin cá nhân</item>
        <item>Mời tải ứng dụng</item>
    </string-array>
    <string name="boqua">Bỏ qua</string>
    <string name="huongdandangky">Hướng dẫn đăng ký</string>
    <string name="noapi">Chưa có api</string>
    <string name="khonglayduocanh">Không thể lấy được file ảnh.</string>
    <string name="timkiemdanhba">Tìm kiếm danh bạ</string>
    <string name="loading">Loading ...</string>
    <string name="trangchu">Trang chủ</string>
    <string name="dichvu">Dịch vụ</string>
    <string name="bangxephang">Bảng xếp hạng</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="tintuc">Tin tức</string>
    <string name="dexuatchoban">Đề xuất cho bạn</string>
    <string name="chitietcanhanbangxephang">Chi tiết cá nhân xếp hạng</string>
    <string name="bidanh">Bí danh</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chonngaysinh">Chọn ngày sinh</string>
    <string name="sogiaodichthanhcongtrongthang">Số giao dịch thành công trong tháng</string>
    <string name="sogiaodichthanhcong">Số giao dịch thành công</string>
    <string name="sotienhoahongtrongthang">Số tiền hoa hồng trong tháng</string>
    <string name="sotienhoahong">Số tiền hoa hồng</string>
    <string name="dichvubanchay">Dịch vụ bán chạy</string>
    <string name="dexuatbanhang">Đề xuất bán hàng</string>
    <string name="sothuebaonemoi">Số thuê bao nên mời</string>
    <string name="baocaochitiettaikhoan">Báo cáo chi tiết tài khoản</string>
    <string name="timkiemdichvu">Tìm kiếm dịch vụ</string>
    <string name="diachi">Địa chỉ</string>
    <string name="bancannhapthongtin">Bạn cần nhập thông tin</string>
    <string name="ten">Tên</string>
    <string name="email">Email</string>
    <string name="luthaydoi">Lưu thay đổi</string>
    <string name="dangky">Đăng ký</string>
    <string name="huy">Hủy</string>
    <string name="moi">Mời</string>
    <string name="gui">Gửi</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="tinkhac">Tin khác</string>
    <string name="recoment">Recomnet</string>
    <string name="khuyenmai">Khuyến mãi</string>
    <string name="danhsachcacthuebaodachon">Danh sách các thuê bao đã chọn</string>
    <string name="chonloimoi">Chọn lời mời</string>
    <string name="mautinmoitemplete">Mẫu tin mời Template</string>
    <string name="danhsachdichvudachon">Danh sách dịch vụ đã chọn</string>
    <string name="moidanhba">Mời danh bạ</string>
    <string name="chitiettintuc">Chi tiết tin tức</string>
    <string name="moidichvuchonhieunguoi">Mời dịch vụ cho nhiều người</string>
    <string name="nhapsodienthoai">Nhập số điện thoại</string>
    <string name="chontatca">Chọn tất cả</string>
    <string name="chon">Chọn</string>
    <string name="chitietdichvu">Chi tiết dịch vụ</string>
    <string name="dangdung">Đang dùng</string>
    <string name="kenhbanvas">KÊNH BÁN VAS</string>
    <string name="lichsubanhang">Lịch sử bán hàng</string>
    <string name="quydinhbanhang">Quy định bán hàng</string>
    <string name="huongdanbanhang">Hướng dẫn bán hàng</string>
    <string name="thuongtinnguoidung">Chỉnh sửa thông tin</string>
    <string name="orther">Other</string>
    <string name="tinhnangdichvu">Tính năng dịch vụ</string>
    <string name="updatethanhcong">Cập nhật thành công</string>
    <string name="updatethatbai">Cập nhật thất bại</string>
    <string name="chonanh">Chọn ảnh</string>
    <string name="giacuoc">Giá cước</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="thoigiantrave">Thời gian trả về</string>
    <string name="tinhnangdichvuexample">1.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n2.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n3.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n4.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n5.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n6.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n7.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...
         \n\n8.Website nhặc trực tuyến của tập đoản viễn thông quân đội viettel, các bài hát hot nhất, mới nhất , kết nối với các nhạc sĩ tên tuổi nhất...</string>
    <string name="sodienthoaikhachhang">Số điện thoại khách hàng</string>
    <string name="danhba">Danh bạ</string>
    <string name="thoigianban">Thời gian bán</string>
    <string name="soantin">Soạn tin</string>
    <string name="tu">Từ</string>
    <string name="den">Đến</string>
    <string name="trangthai">Trạng thái</string>
    <string name="tracuu">Tra cứu</string>
    <string name="timnhieuhon">Tìm nhiều hơn</string>
    <string name="banmuondongugndung">Bạn muốn đóng ứng dụng</string>
    <string name="close_ungdung_comfirm">Click vào Đồng ý để đóng ứng dụng.</string>
    <string name="dongy">Đồng ý</string>
    <string name="bangxephang_doanh_thu_no_data">Xin lỗi quý khách hàng!\nHiện tại KÊNH BÁN VAS không có bảng xếp hạng doanh thu nào. Chúng tôi sẽ cập nhật lại sau.</string>
    <string name="bangxephang_so_luong_no_data">Xin lỗi quý khách hàng!\nHiện tại KÊNH BÁN VAS không có bảng xếp hạng số lượng nào. Chúng tôi sẽ cập nhật lại sau.</string>
    <string name="tatca">Tất cả</string>
    <string name="khongthelayduocduongdan">Không thể lấy được đường dẫn file ảnh</string>
    <string name="soluong">Số lượng</string>
    <string name="doanhthu">Doanh thu</string>
    <string name="thongtincanhan">Thông tin cá nhân</string>
    <string name="hoten">Họ tên</string>
    <string name="vnd">VNĐ</string>
    <string name="giaodich">Giao dịch</string>
    <string name="chitietbanhang">Chi tiết bán hàng</string>
    <string name="banchuacomatkhau">Bạn chưa có hoặc quên mật khẩu!\nVui lòng soạn tin nhắn(miến phí)</string>
    <string name="gui1">gửi</string>
    <string-array name="ltrangthai">
        <item>Tất cả</item>
        <item>Thành công</item>
        <item>Thất bại</item>
    </string-array>
    <string name="daaddsdt">Bạn đã thêm số điện thoại này rồi, vui lòng nhập số điện thoại khác.</string>
    <string name="format_check_sdt">Bạn cần kiểm tra lại số điện thoại (%s).\nSố điện thoại phải là số viettel và có 10 hoặc 11 số.</string>
    <string name="noappsendmessage">Không tìm thấy trình gửi tin nhắn.</string>
    <string name="thanhcong">Thành công</string>
    <string name="thatbai">Thất bại</string>
    <string name="chontrangthai">Chọn trạng thái</string>
    <string name="chonsdt">Chọn số điện thoại</string>
    <string name="chondichvu">Chọn dịch vụ</string>
    <string name="chonngay">Chọn ngày</string>
    <string name="danhsachsodienthoaikhongthemoi">Bạn không thể mời các số điện thoại sau (%s).</string>
    <string name="nodata">Không có dữ liệu</string>
    <string name="dong">Đóng</string>
    <string name="thongbao">Thông báo</string>
    <string name="validateaddnguoi">Bạn cần mời ít nhất 1 người bạn.</string>
    <string name="success_moi">Bạn đã mới thành công, bạn chọn \"Đồng ý\" để đóng màn hình mời.</string>
    <string name="validatesodichvu">Bạ cần chọn ít nhất 1 dịch vụ.</string>
    <string name="default_error">{\"errorCode\":10000,\"message\":\"Lỗi đường truyền, bạn cần kiểm tra lại mạng\"}</string>
    <string name="formatdieukhoan" formatted="false">Điều khoản %s</string>
    <string name="chupanhmoi">Chụp ảnh mới</string>
    <string name="chonanhcosan">Chọn ảnh có sẵn</string>
    <string name="recomment_example"> {\"errorCode\":0,\"message\":\"Th\u00e0nh c\u00f4ng\",\"data\":[{\"service_name\":\"All Blocking\",\"service_icon\":\"https://125.235.40.85/cache/uploads/medias/service/icon/2014/11/12/6e19f264de06aa266d779f34fb5c5964563cada8_30_30.jpg\",\"service_url\":null,\"service_code\":\"CS\",\"contacts\":[{\"phone\":\"84986810606\",\"name\":\"Test\"}]},{\"service_name\":\"MobiTV BASIC\",\"service_icon\":\"https://125.235.40.85/cache/uploads/medias/service/icon/2014/11/12/ab90c06aaae035fd47db11d4cba0a064c55e24f9_30_30.jpg\",\"service_url\":null,\"service_code\":\"MT\",\"contacts\":[{\"phone\":\"84986810606\",\"name\":\"Test\"}]},{\"service_name\":\"Call Blocking\",\"service_icon\":\"https://125.235.40.85/cache/uploads/medias/service/icon/2014/11/12/f91dde68a393c53fd0af241db292f3f4b356a7d7_30_30.jpg\",\"service_url\":null,\"service_code\":\"CB\",\"contacts\":[{\"phone\":\"84986810606\",\"name\":\"Test\"}]}]}</string>
    <string name="banchuachonloimoi">Bạn chưa chọn lời mời.</string>
    <string name="format_gia">Giá : %s</string>
    <string name="title_dangky">Đăng ký dịch vụ %s</string>
    <string name="format_tien">%s VNĐ</string>
    <string name="xacnhandangky_form" formatted="false">Xác nhận đăng ký dịch vụ %s \ngiá %s/tháng</string>
    <string name="banchuacomatkhauvuilongsoantinnhan">Bạn chưa có hoặc quên mât khẩu!\nVui lòng soạn tin nhắn(miễn phí)</string>
    <string name="bancannhapsdtvamatkkau">Bạn cần nhập số điện thoại và mật khẩu.</string>
    <string name="xemtatca">Xem tất cả ></string>
    <string name="moithanhvien">Số thuê bao nên mời</string>
    <string name="dichvuhot">Dịch vụ bán chạy</string>
    <string name="dichvudexuat">Dịch vụ đề xuất</string>
    <string name="thoigianbatdau">Thời gian bắt đầu</string>
    <string name="thoigianketthuc">Thời gian kết thúc</string>
    <string name="sodienthoaikhachhang1">SĐT Khách hàng</string>
    <string name="lichsugiaodich">Lịch sử giao dịch</string>
    <string name="fafafa">#fafafa</string>
    <string name="chitietcanhanbxh">Chi tiết cá nhân BXH</string>
    <string name="them">Thêm</string>
    <string name="gia">Giá</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="tinlienquan">Tin liên quan</string>
    <string name="sdtkhongphaicuabiettel">Số điện thoại không phải của viettel.</string>
    <string name="banphainhapngaybatdau">Bạn cần nhập ngày bắt đầu.</string>
    <string name="banphainhapngaykethuc">Bạn cần nhập ngày kết thúc.</string>
    <string name="ngayketthucphaisaungaybatdau">Bạn cần nhập ngày kết thúc sau ngày bắt đầu.</string>
    <string name="khongthelayduocmaumoi">Có lỗi xảy ra, bạn không thể thực hiện lời mời.</string>
    <string name="bandangkythanhcongdichvu">Bạn đăng ký thành công dịch vụ %s</string>
    <string name="error_sdt_viettel">Số điện thoại bạn nhập không phải số viettel hoặc là sim 3g</string>
    <string name="message_dongbo">Đồng bộ danh bạ thành công</string>
    <string name="error_network">Lỗi đường truyền, bạn cần kiểm tra lại mạng.</string>
    <string name="need3g">Để sử dụng ứng dụng, bạn cần sử dụng 3G.</string>
    <string name="khongthedangnhap">Đăng nhập thất bại\nBạn cần kiểm tra lại kết nối 3G</string>
    <string name="ban_co_muon_moi_sdt_nays">Bạn có muốn gửi lời mời ngay bây giờ không?</string>
</resources>